package bataillenavale.game;

public enum GameState {
    MENU,
    RUNNING,
    EPOCH_CHOOSE,
    RESUME_GAME
}
